<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeWork1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan">Scan</string>
    <string name="empty_image">empty_image</string>
    <string name="genatate">Genatate</string>
    <string name="_0">0</string>
    <string name="linear_acceleration">Linear Acceleration</string>
    <string name="azimuth">Azimuth</string>
    <string name="light">Light</string>
    <string name="scan_result_here">Scan result here</string>
    <string name="pressure">Pressure</string>

</resources>