<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

        <TextView
            android:id="@+id/etRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:text="@string/scan_result_here" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genatate" />

    <EditText
        android:id="@+id/etShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/linear_acceleration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvLinearX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0" />

    <TextView
        android:id="@+id/tvLinearY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0" />

    <TextView
        android:id="@+id/tvLinearZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/azimuth"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvAzimuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/light"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pressure"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0" />

</LinearLayout>